[package]
name = "location-macros"
description = "Collection of macros for obtaining the absolute path of the project root"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"
authors = ["Yuki Takagi <takagiy.4dev@gmail.com>"]
keywords = ["macros", "project", "root", "absolute", "path"]
categories = ["filesystem", "configuration", "development-tools"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.4", default-features = false, features = ["parsing"] }
thiserror = "1.0.40"
